--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,10 @@
   <app-root></app-root>
 </body>
 </html>
+<style>
+  body{
+    background: linear-gradient(135deg, #333 0%, #111 100%);
+    overflow-y: hidden;
+  }
+</style>
+
